================================================
|                Version 0.2                   |
================================================
 - Terrain texture splatting;
 - Meteors and FireSpheres;
 - Script Language for AI;
 - Workspace for compiling at M$ Visual C++ 6;
 - More Engine Optimizations;
 - Messages on world map;
 - Smooth Camera Moves;
 - Indoor Reflexions;
 - Better Dynamic Lights Implementation;
 - More 3D Objects;
 - More Characters;
 - Rewrite the GUI Renderer;
 - Fully and scalable collision for the 3D models;
 - GNU gettext used for internationalization;
 - Put the code fully on English (instead of some
   places on english, others on portuguese);
 - New Sound Effects;
 - Objects are now only in cal3D, no more .obj;
 - Fixed Bug on Remove no more used Models;
 - Fixed Bug on NPCs Fight Animations;
 - Fixed Bug on configures;
 - Other minor bugs fixes;

================================================
|               Version 0.1.1                  |
================================================
 - Fixed Bug on Makefiles (they aren't using
   things defined at the autoconf);
 - Fixed Bug on A*: request a new path when
   not finished the movement to one maybe
   result in a crash or allow the character to
   move on a forbidden area;
 - Fixed Bug on .obj models definitions;
 - Fixed Bug on the inventory HEAD;
 - Defined 35 FPS as the minimum one, instead of 
   50 FPS;

================================================
|                Version 0.1                   |
================================================
 - Fight System;
 - Particles System;
 - Particles (blood, fire, smoke, waterfall, 
              snow);
 - Dynamic Grass;
 - Inventory;
 - Dialogs with NPCs;
 - Some AI;
 - Rules System;
 - Character Navigation by Mouse;
 - Full Implemented Rules for Character Creation;
 - Dynamic Lights & Fog per map;
 - Engine Optimizations;
 - Better Sky;
 - Some possible actions;
 - Max Range of Action;
 - Uses OpenAL for Audio;